--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@
 .row{
     display:flex;
     align-items:center;
-    justify-content: center;
+    justify-content : center;
     width:1000px;
-    border:1px red solid;
     margin:10px;
+    font-size:40px;
+    color:white;
 }
 #search{
     font-size: 25px;
