--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
     width:1000px;
     margin:10px;
     font-size:40px;
-    color:white;
+    color:rgb(255, 15, 15);
 }
 #search{
     font-size: 25px;
